# CCZ-connectivity

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
analysis/: hycom_vertical_profile_analysis.py
config/: config.yaml  config_test.yaml
data/: README.md
src/ccz_connectivity/: __init__.py  connectivity.py  grid.py  icv.py  network.py  optimisation.py  plotting.py  tracking.py
tests/: README.md  generate_test_data.py  run_test_pipeline.sh
tests/data/shapefiles/: ami.shp  apei.shp  ccz_boundary.shp  ccz_grid.shp  ccz_grid_centroids.csv
workflow/: 00_download_hycom.py  01_run_particle_tracker.py  01_run_particle_tracker_slurm.sh  02_process_connectivity.py  03_network_analysis.py  04_corridor_optimisation.py  05_generate_figures.py  06_generate_tables.py
