[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccz-connectivity"
version = "1.0.0"
description = "CCZ larval dispersal connectivity analysis — James et al."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "James et al." },
]
requires-python = ">=3.10"
keywords = [
    "oceanography",
    "larval dispersal",
    "connectivity",
    "Clarion-Clipperton Zone",
    "OceanParcels",
    "igraph",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Oceanography",
]
dependencies = [
    "xarray>=2023.6",
    "netcdf4>=1.6",
    "zarr>=2.16",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "python-igraph>=0.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "cartopy>=0.22",
    "cmocean>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
parcels = [
    "parcels>=3.0.4",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
]

[project.urls]
Repository = "https://github.com/james-et-al/ccz-connectivity"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 99
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 99

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
